--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<script src="main.ts"></script>
-<canvas id="canvas"></canvas>
+<script defer src="main.js"></script>
+<canvas id="canvas" width="1500px" style="border:1px solid #000000; width: 100%; height: 100%;">
+
+</canvas>
