--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <script defer src="main.js"></script>
+<script defer src="tile.js" type="module"></script>
 <canvas id="canvas" width="1500px" style="border:1px solid #000000; width: 100%; height: 100%;">
 
 </canvas>
