--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
+<script defer src="vec2.js"></script>
 <script defer src="render.js"></script>
 <script defer src="tile.js"></script>
 <script defer src="procgen.js"></script>
 <script defer src="car.js"></script>
 <script defer src="main.js"></script>
 
-
-<canvas id="canvas" width="1500px" style="border:1px solid #000000; width: 100%; height: 100%;">
-
+<canvas
+  id="canvas"
+  width="1500px"
+  style="border: 1px solid #000000; width: 100%; height: 100%"
+>
 </canvas>
