--- a/menu/menu.html
+++ b/menu/menu.html
@@ -30,7 +30,7 @@
 
     <div class="image-container">
       <img
-        src="./drew-a-car-for-a-game-ive-been-working-on-feel-free-to-give-v0-ptp3cxnvg00c1.png"
+        src="menu_images/drew-a-car-for-a-game-ive-been-working-on-feel-free-to-give-v0-ptp3cxnvg00c1.png"
         class="image1"
       />
     </div>
